version/0.1/_sources/examples/legacy_pyaedt_integration/14_edb_create_parametrized_design.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_pyaedt_integration\14_edb_create_parametrized_design.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_pyaedt_integration_14_edb_create_parametrized_design.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_pyaedt_integration_14_edb_create_parametrized_design.py:


EDB: parameterized design
------------------------
This example shows how to
1, Create an HFSS simulation project using SimulationConfiguration class.
2, Create automatically parametrized design.

.. GENERATED FROM PYTHON SOURCE LINES 9-16

Final expected project
 ~~~~~~~~~~~~~~~~~~~~~~

 .. image:: ../../_static/parametrized_design.png
  :width: 600
  :alt: Fully automated parametrization.
#####################################################################

.. GENERATED FROM PYTHON SOURCE LINES 18-22

Create HFSS simulatio project
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Load an existing EDB folder.
#####################################################################

.. GENERATED FROM PYTHON SOURCE LINES 22-33

.. code-block:: default


    from pyaedt import Hfss3dLayout

    import pyedb
    from pyedb.generic.general_methods import generate_unique_folder_name
    from pyedb.misc.downloads import download_file

    project_path = generate_unique_folder_name()
    target_aedb = download_file("edb/ANSYS-HSD_V1.aedb", destination=project_path)
    print("Project folder will be", target_aedb)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Project folder will be C:\Users\ansys\AppData\Local\Temp\pyedb_prj_REU\edb/ANSYS-HSD_V1.aedb




.. GENERATED FROM PYTHON SOURCE LINES 34-37

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 37-40

.. code-block:: default


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 41-44

Launch EDB
~~~~~~~~~~
Launch the :class:`pyedb.Edb` class, using EDB 2023 R2.

.. GENERATED FROM PYTHON SOURCE LINES 44-49

.. code-block:: default


    aedt_version = "2023.2"
    edb = pyedb.Edb(edbpath=target_aedb, edbversion=aedt_version)
    print("EDB is located at {}".format(target_aedb))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    EDB is located at C:\Users\ansys\AppData\Local\Temp\pyedb_prj_REU\edb/ANSYS-HSD_V1.aedb




.. GENERATED FROM PYTHON SOURCE LINES 50-52

Create SimulationConfiguration object and define simulation parameters
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 52-62

.. code-block:: default


    simulation_configuration = edb.new_simulation_configuration()
    simulation_configuration.signal_nets = ["PCIe_Gen4_RX0_P", "PCIe_Gen4_RX0_N", "PCIe_Gen4_RX1_P", "PCIe_Gen4_RX1_N"]
    simulation_configuration.power_nets = ["GND"]
    simulation_configuration.components = ["X1", "U1"]
    simulation_configuration.do_cutout_subdesign = True
    simulation_configuration.start_freq = "OGHz"
    simulation_configuration.stop_freq = "20GHz"
    simulation_configuration.step_freq = "10MHz"








.. GENERATED FROM PYTHON SOURCE LINES 63-65

Build simulation project
~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 65-68

.. code-block:: default


    edb.build_simulation_project(simulation_configuration)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 69-72

Generated design parameters
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 72-75

.. code-block:: default


    edb.auto_parametrize_design(layers=True, materials=True, via_holes=True, pads=True, antipads=True, traces=True)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['$1_Top_thick', '$DE1_thick', '$Inner1_GND1__thick', '$DE2_thick', '$Inner2_PWR1__thick', '$DE3_thick', '$Inner3_Sig1__thick', '$Megtron4_1mm_thick', '$Inner4_Sig2__thick', '$DE5_thick', '$Inner5_PWR2__thick', '$DE6_thick', '$Inner6_GND2__thick', '$DE7_thick', '$16_Bottom_thick', '$sigma_copper', '$epsr_FR4_epoxy', '$loss_tangent_FR4_epoxy', '$epsr_Megtron4', '$loss_tangent_Megtron4', '$epsr_Megtron4_2', '$loss_tangent_Megtron4_2', '$epsr_Megtron4_3', '$loss_tangent_Megtron4_3', '$epsr_Solder_Resist', '$loss_tangent_Solder_Resist', 'trace_w_PCIe_Gen4_RX1_P_270', 'trace_w_PCIe_Gen4_RX1_N_271', 'trace_w_PCIe_Gen4_RX0_P_272', 'trace_w_PCIe_Gen4_RX0_N_273', 'trace_w_PCIe_Gen4_RX1_P_1275', 'trace_w_PCIe_Gen4_RX1_N_1276', 'trace_w_PCIe_Gen4_RX0_P_1277', 'trace_w_PCIe_Gen4_RX0_N_1278', '$pad_diam_c50_1_Top', '$pad_size_x_r35_140_1_Top', '$pad_size_y_r35_140_1_Top', '$pad_size_x_r368_127_1_Top', '$pad_size_y_r368_127_1_Top', '$hole_diam_v35h15', '$pad_diam_v35h15_1_Top', '$pad_diam_v35h15_Inner1_GND1_', '$pad_diam_v35h15_Inner2_PWR1_', '$pad_diam_v35h15_Inner3_Sig1_', '$pad_diam_v35h15_Inner4_Sig2_', '$pad_diam_v35h15_Inner5_PWR2_', '$pad_diam_v35h15_Inner6_GND2_', '$pad_diam_v35h15_16_Bottom', '$hole_diam_v40h15', '$pad_diam_v40h15_1_Top', '$pad_diam_v40h15_Inner1_GND1_', '$pad_diam_v40h15_Inner2_PWR1_', '$pad_diam_v40h15_Inner3_Sig1_', '$hole_diam_v40h15_1', '$pad_diam_v40h15_1_1_Top', '$pad_diam_v40h15_1_Inner1_GND1_', '$hole_diam_v40h20_1', '$pad_diam_v40h20_1_1_Top', '$pad_diam_v40h20_1_Inner1_GND1_', '$pad_diam_v40h20_1_Inner2_PWR1_', '$pad_diam_v40h20_1_Inner3_Sig1_', '$pad_diam_v40h20_1_Inner4_Sig2_', '$pad_diam_v40h20_1_Inner5_PWR2_', '$pad_diam_v40h20_1_Inner6_GND2_', '$pad_diam_v40h20_1_16_Bottom', '$hole_diam_v40h20_2', '$pad_diam_v40h20_2_1_Top', '$pad_diam_v40h20_2_Inner1_GND1_', '$pad_diam_v40h20_2_Inner2_PWR1_', '$pad_diam_v40h20_2_Inner3_Sig1_']



.. GENERATED FROM PYTHON SOURCE LINES 76-79

Plot EDB
~~~~~~~~
Plot EDB.

.. GENERATED FROM PYTHON SOURCE LINES 79-82

.. code-block:: default


    edb.nets.plot(None)




.. image-sg:: /examples/legacy_pyaedt_integration/images/sphx_glr_14_edb_create_parametrized_design_001.png
   :alt: main
   :srcset: /examples/legacy_pyaedt_integration/images/sphx_glr_14_edb_create_parametrized_design_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 83-85

Save EDB and open in AEDT
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 85-92

.. code-block:: default


    edb.save_edb()
    edb.close_edb()

    # Uncomment the following line to open the design in HFSS 3D Layout
    hfss = Hfss3dLayout(projectname=target_aedb, specified_version=aedt_version, non_graphical=non_graphical, new_desktop_session=True)
    hfss.release_desktop()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Initializing new desktop!

    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 49.216 seconds)


.. _sphx_glr_download_examples_legacy_pyaedt_integration_14_edb_create_parametrized_design.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 14_edb_create_parametrized_design.py <14_edb_create_parametrized_design.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 14_edb_create_parametrized_design.ipynb <14_edb_create_parametrized_design.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
