version/0.17/_sources/examples/legacy_pyaedt_integration/14_edb_create_parametrized_design.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_pyaedt_integration\14_edb_create_parametrized_design.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_pyaedt_integration_14_edb_create_parametrized_design.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_pyaedt_integration_14_edb_create_parametrized_design.py:


EDB: parameterized design
------------------------
This example shows how to
1, Create an HFSS simulation project using SimulationConfiguration class.
2, Create automatically parametrized design.

.. GENERATED FROM PYTHON SOURCE LINES 31-38

Final expected project
 ~~~~~~~~~~~~~~~~~~~~~~

 .. image:: ../../_static/parametrized_design.png
  :width: 600
  :alt: Fully automated parametrization.
#####################################################################

.. GENERATED FROM PYTHON SOURCE LINES 40-44

Create HFSS simulatio project
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Load an existing EDB folder.
#####################################################################

.. GENERATED FROM PYTHON SOURCE LINES 44-55

.. code-block:: Python


    from pyaedt import Hfss3dLayout

    import pyedb
    from pyedb.generic.general_methods import generate_unique_folder_name
    from pyedb.misc.downloads import download_file

    project_path = generate_unique_folder_name()
    target_aedb = download_file("edb/ANSYS-HSD_V1.aedb", destination=project_path)
    print("Project folder will be", target_aedb)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Project folder will be C:\Users\ansys\AppData\Local\Temp\pyedb_prj_FME\edb/ANSYS-HSD_V1.aedb




.. GENERATED FROM PYTHON SOURCE LINES 56-59

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. The default is ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 59-62

.. code-block:: Python


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 63-66

Launch EDB
~~~~~~~~~~
Launch the :class:`pyedb.Edb` class, using EDB 2023 R2.

.. GENERATED FROM PYTHON SOURCE LINES 66-71

.. code-block:: Python


    aedt_version = "2024.1"
    edb = pyedb.Edb(edbpath=target_aedb, edbversion=aedt_version)
    print("EDB is located at {}".format(target_aedb))



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_pyaedt_integration\14_edb_create_parametrized_design.py", line 68, in <module>
        edb = pyedb.Edb(edbpath=target_aedb, edbversion=aedt_version)
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 72-74

Create SimulationConfiguration object and define simulation parameters
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 74-84

.. code-block:: Python


    simulation_configuration = edb.new_simulation_configuration()
    simulation_configuration.signal_nets = ["PCIe_Gen4_RX0_P", "PCIe_Gen4_RX0_N", "PCIe_Gen4_RX1_P", "PCIe_Gen4_RX1_N"]
    simulation_configuration.power_nets = ["GND"]
    simulation_configuration.components = ["X1", "U1"]
    simulation_configuration.do_cutout_subdesign = True
    simulation_configuration.start_freq = "OGHz"
    simulation_configuration.stop_freq = "20GHz"
    simulation_configuration.step_freq = "10MHz"


.. GENERATED FROM PYTHON SOURCE LINES 85-87

Build simulation project
~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 87-90

.. code-block:: Python


    edb.build_simulation_project(simulation_configuration)


.. GENERATED FROM PYTHON SOURCE LINES 91-94

Generated design parameters
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. GENERATED FROM PYTHON SOURCE LINES 94-97

.. code-block:: Python


    edb.auto_parametrize_design(layers=True, materials=True, via_holes=True, pads=True, antipads=True, traces=True)


.. GENERATED FROM PYTHON SOURCE LINES 98-101

Plot EDB
~~~~~~~~
Plot EDB.

.. GENERATED FROM PYTHON SOURCE LINES 101-104

.. code-block:: Python


    edb.nets.plot(None)


.. GENERATED FROM PYTHON SOURCE LINES 105-107

Save EDB and open in AEDT
~~~~~~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 107-116

.. code-block:: Python


    edb.save_edb()
    edb.close_edb()

    # Uncomment the following line to open the design in HFSS 3D Layout
    hfss = Hfss3dLayout(
        projectname=target_aedb, specified_version=aedt_version, non_graphical=non_graphical, new_desktop_session=True
    )
    hfss.release_desktop()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.391 seconds)


.. _sphx_glr_download_examples_legacy_pyaedt_integration_14_edb_create_parametrized_design.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 14_edb_create_parametrized_design.ipynb <14_edb_create_parametrized_design.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 14_edb_create_parametrized_design.py <14_edb_create_parametrized_design.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
